<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Welcome message -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal" />

    <!-- Image -->
    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/welcome_image_description" />

    <!-- Search bar -->
    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Search by city"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:padding="12dp"/>

    <!-- Search button -->
    <Button
        android:id="@+id/buttonSearch"
        style="@style/Widget.ECharging.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_button"
        android:layout_marginTop="8dp" />

    <!-- Stations list -->
    <ListView
        android:id="@+id/listViewStations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <!-- QR Code Scan button -->
    <Button
        android:id="@+id/buttonScanQRCode"
        style="@style/Widget.ECharging.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code_button"
        android:layout_marginTop="16dp" />

    <!-- Account button -->
    <Button
        android:id="@+id/buttonAccount"
        style="@style/Widget.ECharging.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_button"
        android:layout_marginTop="8dp"
        android:layout_gravity="end" />

</LinearLayout>
